--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch --mode development ./src/index.js --output-path ./static/frontend/",
-    "build": "webpack --mode production ./src/index.js --output-path ./static/frontend/",
-    "start": "webpack --watch --mode development ./src/index.js --output-path ./static/frontend/",
+    "dev": "webpack --watch --mode development ./src/index.tsx --output-path ./static/frontend/",
+    "build": "webpack --mode production ./src/index.tsx --output-path ./static/frontend/",
+    "start": "webpack --watch --mode development ./src/index.tsx --output-path ./static/frontend/",
     "lint": "eslint ."
   },
   "keywords": [],
